day3/lab9-dev/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ci-demo-stuXX # 🐳  Change this
