day3/lab9-dev/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
  namespace: ci-demo-stuXX # 🐳  Change this 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
        - name: kubia
          image: stv707/kubia:v14
          ports:
            - containerPort: 8080
