day3/lab9-dev/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
  namespace: ci-demo-stuXX # 🐳  Change this 
spec:
  selector:
    app: kubia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
